# MealPlan/Controllers/MealPlanController.cs
@@ -1,4 +1,5 @@
-﻿using MealPlan.Application.MealPlan.Queries.GetMealPlan;
+﻿using AutoMapper;
+using MealPlan.Application.MealPlan.Queries.GetMealPlan;
 using MealPlan.DTOs.MealPlan;
 using MediatR;
 using Microsoft.AspNetCore.Mvc;
@@ -11,19 +12,21 @@ namespace MealPlan.Controllers
     public class MealPlanController : ControllerBase
     {
         private readonly IMediator _mediator;
+        private readonly IMapper _mapper;
 
-        public MealPlanController(IMediator mediator)
+        public MealPlanController(IMediator mediator, IMapper mapper)
         {
             _mediator = mediator;
+            _mapper = mapper;
         }
 
         [HttpGet]
-        public async Task<ActionResult<MealPlanDto>> Get(DateOnly startDate, DateOnly endDate)
+        public async Task<ActionResult<IEnumerable<MealPlanDto>>> Get(DateOnly startDate, DateOnly endDate)
         {
             var request = new GetMealPlanRequest { StartDate = startDate, EndDate = endDate };
             var result = await _mediator.Send(request);
 
-            return new MealPlanDto();
+            return _mapper.Map<List<MealPlanDto>>(result);
         }
     }
 }
